// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themes >> Loading Skeleton >> Skeleton Element Given skeleton element has a variant of avatar Should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
      },
      Array [
        Object {},
        Array [
          Object {
            "borderColor": "#eaeaea",
            "borderRadius": 48,
            "borderWidth": 1,
            "height": 50,
            "width": 50,
          },
        ],
      ],
    ]
  }
/>
`;

exports[`themes >> Loading Skeleton >> Skeleton Element Given skeleton element has a variant of text Should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
      },
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#eaeaea",
            "height": 10,
            "width": "70%",
          },
        ],
      ],
    ]
  }
/>
`;

exports[`themes >> Loading Skeleton >> Skeleton Element Given skeleton element has a variant of thumbNail Should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
      },
      Array [
        Object {},
        Array [
          Object {
            "height": 50,
            "width": 50,
          },
        ],
      ],
    ]
  }
/>
`;

exports[`themes >> Loading Skeleton >> Skeleton Element Given skeleton element has a variant of title Should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
      },
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#eaeaea",
            "height": 20,
            "marginBottom": 16,
            "width": "50%",
          },
        ],
      ],
    ]
  }
/>
`;
